--- a/configs/config-core.cfg
+++ b/configs/config-core.cfg
@@ -1,7 +1,7 @@
 [paths]
 train = null
 dev = null
-vectors = null
+vectors = "training/model-best"
 init_tok2vec = null
 
 [system]
@@ -21,31 +21,32 @@ batch_size = 1000
 [components]
 
 [components.senter]
-source = "training/sm/model-best"
+source = "training/model-best"
 
 [components.normer]
 factory = "normer"
 
 [components.tok2vec]
-source = "training/sm/model-best"
+source = "training/model-best"
+include_static_vectors = true
 
 [components.tagger]
-source = "training/sm/model-best"
+source = "training/model-best"
 
 [components.morphologizer]
-source = "training/sm/model-best"
+source = "training/model-best"
 
 [components.trainable_lemmatizer]
-source = "training/sm/model-best"
+source = "training/model-best"
 
 [components.parser]
-source = "training/sm/model-best"
+source = "training/model-best"
 
 [components.lemma_fixer]
 factory = "lemma_fixer"
 
 [components.ner]
-source = "training/sm/ner/model-best"
+source = "training/ner/model-best"
 replace_listeners = ["model.tok2vec"]
 
 [pretraining]
